--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                                 <li>Category: NLP </li>
                             </ul>
                             <p>
-                                <a href="https://github.com/thayeylolu/Data-Engineering-Projects/tree/master/aws/real-time%20product%20analysis%20with%20kafka">View
+                                <a href="https://github.com/thayeylolu/cyberbullying">View
                                     Here</a></p>
                         </div>
                     </div>
