--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 </div>
                 <div class="mb-50 wow fadeIn" data-wow-duration=".8s">
                     <p>
-                        Data Scientist with 3+ years of commercial experience in analytics,
+                        Data Scientist with years of commercial experience in analytics,
                         significantly contributed to business goals in customer experience,
                         risk migration, innovative marketing, and sales operations.
                     </p>
